--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
     <table style="width: 100%; max-width: 500px; border-collapse: collapse; font-family: Arial, sans-serif;">
         <tr>
-            <td style="padding: 10px;">
-                <img src="https://rootslogitech.com/logo/rootslogitech-full-black.svg" alt="Your Logo" width="100"
-                    style="border-radius: 50%;">
+            <td style="padding: 10px; width:170px">
+                <img src="https://rootlogitech-email-signature-4tco.vercel.app/rootlogitech-logo-full.png"
+                    alt="Your Logo" width="150">
             </td>
             <td style="padding: 10px; vertical-align: middle;">
-                <p style="margin: 0; font-size: 16px; font-weight: bold; color: #333;">John Doe</p>
-                <p style="margin: 0; font-size: 14px; color: #555;">Web UI Specialist | Technical Lead</p>
-                <p style="margin: 5px 0; font-size: 12px; color: #777;">Email: <a href="mailto:johndoe@example.com"
-                        style="color: #0073e6; text-decoration: none;">johndoe@example.com</a></p>
-                <p style="margin: 0; font-size: 12px; color: #777;">Phone: <a href="tel:+1234567890"
-                        style="color: #0073e6; text-decoration: none;">+123 456 7890</a></p>
-                <p style="margin: 5px 0;">
-                    <a href="#" style="text-decoration: none; margin-right: 5px;"><img
-                            src="https://via.placeholder.com/20" alt="LinkedIn"></a>
-                    <a href="#" style="text-decoration: none; margin-right: 5px;"><img
-                            src="https://via.placeholder.com/20" alt="Twitter"></a>
-                    <a href="#" style="text-decoration: none;"><img src="https://via.placeholder.com/20"
-                            alt="Website"></a>
+                <p style="margin: 0; font-size: 16px; font-weight: bold; color: #333;">Sameera Liyanage</p>
+                <p style="margin: 0;margin-bottom: 10px; font-size: 14px; color: #555;">Technical Lead</p>
+                <p style="margin: 5px 0; font-size: 12px; color: #777;">Email: <a
+                        href="mailto:sameera.l@rootlogitech.com"
+                        style="color: #000; text-decoration: none;">sameera.l@rootlogitech.com</a></p>
+                <p style="margin: 0; font-size: 12px; color: #777;">Phone: <a href="tel:+94770082014"
+                        style="color: #000; text-decoration: none;">+94 77 008 2014</a></p>
+                <p style="margin: 8px 0;">
+                    <a href="#" style="text-decoration: none; margin-right: 5px;">
+                        <img src="https://img.icons8.com/?size=100&id=8808&format=png&color=000000" width="18"
+                            alt="LinkedIn">
+                    </a>
+
                 </p>
             </td>
         </tr>
